--- a/options.html
+++ b/options.html
@@ -5,16 +5,10 @@
     <title>Real Debrid Extension</title>
 
 
-    <link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/lyme.css">
-	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" ></script>
-	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-
+    <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+	<script src="jquery.min.js" ></script>
+	<script src="bootstrap.min.js"></script>
 	<style type="text/css">
-
-		@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,800);
-
 		html, body{
 			display: flex;
 			width: 100%;
