Added local dependencies. Added options

--- a/options.html
+++ b/options.html
@@ -80,11 +80,12 @@
 
 				<div class="col-md-4">
 			   		<div class="form-group">
-					    <button class="button">Save</button>
+					    <button class="button" id="save">Save</button>
 			   		</div><!-- ./form-group -->
 				</div><!-- ./col-md-4 -->
 
 			</div><!-- ./row -->
 		</div><!-- ./container -->
+		<script src="options.js"></script>
   </body>
 </html>
