--- a/src/html/options.html
+++ b/src/html/options.html
@@ -20,5 +20,5 @@
 		<input id="warningDays" name="warningDays" type="text" placeholder="" required="">
 		<button id="save" name="save" class="btn btn-primary">Save</button>
 	</div>
-	<script src="options.js"></script>
+	<script src="/js/options.js"></script>
 </body>
