--- a/src/html/options.html
+++ b/src/html/options.html
@@ -10,9 +10,9 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="/libs/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/libs/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="../libs/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../libs/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../css/main.css">
 
     <script src="/libs/js/jquery.min.js"></script>
 </head>
