--- a/src/html/options.html
+++ b/src/html/options.html
@@ -23,7 +23,8 @@
             <h1>Real Debrid</h1>
         </div>
         <ol>
-            <li><a href="#">Options</a><i class="fa fa-cog"></i></li>
+            <li><a href="#">Options</a><i class="fa fa-cog"></i>
+            </li>
         </ol>
     </div>
     <div id="contentarea">
@@ -34,27 +35,37 @@
         <div class="row">
             <div class="contentbox">
                 <div class="flex-column">
-                    <section><h3>Warning Notifications</h3></section>
+                    <section>
+                        <h3>Warning Notifications</h3>
+                    </section>
                     <hr>
                     <section>
-                        <form>
-                            <label for="warningPercentage">Warning Percentage</label>
-                            <input id="warningPercentage" name="warningPercentage" type="number" />
-                            <label for="warningDays">Warning Days</label>
-                            <input id="warningDays" name="warningDays" type="number" />
+                        <form class="form-inline">
+                            <div class="fomgroup">
+                                <label for="warningPercentage">Warning Percentage</label>
+                                <input  id="warningPercentage" name="warningPercentage" type="number" class="form-control" />
+                            </div>
+                            <div class="fomgroup">
+                                <label for="warningDays">Warning Days</label>
+                                <input id="warningDays" name="warningDays" type="number" class="form-control" />
+                            </div>
                         </form>
                     </section>
                 </div>
             </div>
             <div class="contentbox">
                 <div class="flex-column">
-                    <section><h3>About</h3></section>
+                    <section>
+                        <h3>About</h3>
+                    </section>
                     <hr>
                     <section>
-                    <ul>
-                        <li><a href="https://chrome.google.com/webstore/detail/real-debrid/llhbijccmpenbpkblhmeeneeaangebej">Real-Debrid Extension in the Chrome Web Store</a></li>
-                        <li><a href="https://github.com/JDevlieghere/Real-Debrid">Source Code on GitHub</a></li>
-                    </ul>
+                        <ul>
+                            <li><a href="https://chrome.google.com/webstore/detail/real-debrid/llhbijccmpenbpkblhmeeneeaangebej">Real-Debrid Extension in the Chrome Web Store</a>
+                            </li>
+                            <li><a href="https://github.com/JDevlieghere/Real-Debrid">Source Code on GitHub</a>
+                            </li>
+                        </ul>
                     </section>
                 </div>
             </div>
