--- a/src/html/options.html
+++ b/src/html/options.html
@@ -42,11 +42,11 @@
                     <section>
                         <form class="form-inline">
                             <div class="fomgroup">
-                                <label for="warningPercentage">Warning Percentage</label>
+                                <label for="warningPercentage">Usage limited hosters (%)</label>
                                 <input id="warningPercentage" name="warningPercentage" type="number" class="form-control" />
                             </div>
                             <div class="fomgroup">
-                                <label for="warningDays">Warning Days</label>
+                                <label for="warningDays">Premium expiration (days)</label>
                                 <input id="warningDays" name="warningDays" type="number" class="form-control" />
                             </div>
                         </form>
