Added version number to options page

--- a/src/html/options.html
+++ b/src/html/options.html
@@ -26,6 +26,8 @@
             <li><a href="#">Options</a><i class="fa fa-cog"></i>
             </li>
         </ol>
+        <div class="footer">Real-Debrid Extension v<span id="version"></span>
+        </div>
     </div>
     <div id="contentarea">
         <div class="header">
