Typo's and cleanup

--- a/src/html/options.html
+++ b/src/html/options.html
@@ -38,13 +38,13 @@
             <div class="contentbox">
                 <div class="flex-column">
                     <section>
-                        <h3>Warning Notifications</h3>
+                        <h3>Warnings</h3>
                     </section>
                     <hr>
                     <section>
                         <form class="form-inline">
                             <div class="fomgroup">
-                                <label for="warningPercentage">Usage limited hosters (%)</label>
+                                <label for="warningPercentage">Limited hoster usage (%)</label>
                                 <input id="warningPercentage" name="warningPercentage" type="number" class="form-control" />
                             </div>
                             <div class="fomgroup">
