--- a/src/html/options.html
+++ b/src/html/options.html
@@ -72,6 +72,29 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="contentbox">
+                <section>
+                    <h3>Latest Downloads</h3>
+                </section>
+                <hr>
+                <section>
+                    <table class="table table-hover" id="downloads">
+                        <thead>
+                            <tr>
+                                <th>Host</th>
+                                <th>Name</th>
+                                <th>Date</th>
+                                <th>Original</th>
+                                <th>Unrestricted</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        </tbody>
+                </section>
+            </div>
+        </div>
+
     </div>
     <script src="/js/options.js"></script>
 </body>
