--- a/src/html/options.html
+++ b/src/html/options.html
@@ -23,19 +23,20 @@
             <h1>Real Debrid</h1>
         </div>
         <ol>
-            <li><a href="#">Options</a><i class="fa fa-cog"></i>
-            </li>
+            <li><a href="#options">Options</a><i class="fa fa-cog"></i> </li>
+            <li><a href="#account">Account Info</a><i class="fa fa-user"></i> </li>
+            <li><a href="#recent">Latest Downloads</a><i class="fa fa-list"></i> </li>
         </ol>
         <div class="footer">Real-Debrid Extension v<span id="version"></span>
         </div>
     </div>
     <div id="contentarea">
-        <div class="header">
+        <div class="header" id="options">
             <h1>Options</h1>
             <button id="save" name="save">Save</button>
         </div>
         <div class="row">
-            <div class="contentbox">
+            <div class="contentbox" >
                 <div class="flex-column">
                     <section>
                         <h3>Warnings</h3>
@@ -72,7 +73,15 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row" id="account">
+            <div class="contentbox">
+                <section>
+                    <h3>Account Info</h3>
+                </section>
+                <hr>
+            </div>
+        </div>
+        <div class="row" id="recent">
             <div class="contentbox">
                 <section>
                     <h3>Latest Downloads</h3>
