--- a/src/html/options.html
+++ b/src/html/options.html
@@ -27,6 +27,8 @@
             </li>
             <li><a href="#account">Account Info</a><i class="fa fa-user"></i> 
             </li>
+            <li><a href="#limited">Limited Hosters</a><i class="fa fa-bar-chart-o"></i> 
+            </li>
             <li><a href="#recent">Latest Downloads</a><i class="fa fa-list"></i> 
             </li>
         </ol>
@@ -97,6 +99,8 @@
                     </div>
                 </section>
             </div>
+        </div>
+        <div class="row" id="limited">
             <div class="contentbox">
                 <section>
                     <h3>Limited Hosters</h3>
