Ready for production

--- a/src/html/options.html
+++ b/src/html/options.html
@@ -71,6 +71,7 @@
                         </li>
                         <li><a href="https://github.com/JDevlieghere/Real-Debrid">Source Code on GitHub</a>
                         </li>
+                        <li>Follow <a href="https://twitter.com/JDevlieghere" target="_blank">@JDevlieghere</a> and <a href="https://twitter.com/StefanPante" target="_blank">@StefanPante</a>
                     </ul>
                 </section>
             </div>
