--- a/src/html/options.html
+++ b/src/html/options.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="../libs/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/main.css">
 
-    <script src="/libs/js/jquery.min.js"></script>
+    <script type="text/javascript" src="/libs/js/jquery.min.js"></script>
+    <script type="text/javascript" src="/libs/js/jquery.scrollTo.min.js"></script>
 </head>
 
 <body>
@@ -23,55 +24,117 @@
             <h1>Real Debrid</h1>
         </div>
         <ol>
-            <li><a href="#">Options</a><i class="fa fa-cog"></i>
+            <li><a href="#options">Options</a><i class="fa fa-cog"></i> 
+            </li>
+            <li><a href="#account">Account Info</a><i class="fa fa-user"></i> 
+            </li>
+            <li><a href="#limited">Limited Hosters</a><i class="fa fa-bar-chart-o"></i> 
+            </li>
+            <li><a href="#recent">Latest Downloads</a><i class="fa fa-list"></i> 
             </li>
         </ol>
         <div class="footer">Real-Debrid Extension v<span id="version"></span>
         </div>
     </div>
     <div id="contentarea">
-        <div class="header">
+        <div class="header" id="options">
             <h1>Options</h1>
             <button id="save" name="save">Save</button>
         </div>
         <div class="row">
             <div class="contentbox">
-                <div class="flex-column">
-                    <section>
-                        <h3>Warnings</h3>
-                    </section>
-                    <hr>
-                    <section>
-                        <form class="form-inline">
-                            <div class="fomgroup">
-                                <label for="warningPercentage">Limited hoster usage (%)</label>
-                                <input id="warningPercentage" name="warningPercentage" type="number" class="form-control" />
-                            </div>
-                            <div class="fomgroup">
-                                <label for="warningDays">Premium expiration (days)</label>
-                                <input id="warningDays" name="warningDays" type="number" class="form-control" />
-                            </div>
-                        </form>
-                    </section>
-                </div>
+                <section>
+                    <h3>Warnings</h3>
+                </section>
+                <hr>
+                <section>
+                    <form class="form-inline">
+                        <div class="fomgroup">
+                            <label for="warningPercentage">Limited hoster usage (%)</label>
+                            <input id="warningPercentage" name="warningPercentage" type="number" class="form-control" />
+                        </div>
+                        <div class="fomgroup">
+                            <label for="warningDays">Premium expiration (days)</label>
+                            <input id="warningDays" name="warningDays" type="number" class="form-control" />
+                        </div>
+                    </form>
+                </section>
             </div>
             <div class="contentbox">
-                <div class="flex-column">
-                    <section>
-                        <h3>About</h3>
-                    </section>
-                    <hr>
-                    <section>
-                        <ul>
-                            <li><a href="https://chrome.google.com/webstore/detail/real-debrid/llhbijccmpenbpkblhmeeneeaangebej">Real-Debrid Extension in the Chrome Web Store</a>
-                            </li>
-                            <li><a href="https://github.com/JDevlieghere/Real-Debrid">Source Code on GitHub</a>
-                            </li>
-                        </ul>
-                    </section>
-                </div>
+                <section>
+                    <h3>About</h3>
+                </section>
+                <hr>
+                <section>
+                    <ul>
+                        <li><a href="https://chrome.google.com/webstore/detail/real-debrid/llhbijccmpenbpkblhmeeneeaangebej">Real-Debrid Extension in the Chrome Web Store</a>
+                        </li>
+                        <li><a href="https://github.com/JDevlieghere/Real-Debrid">Source Code on GitHub</a>
+                        </li>
+                        <li>Follow <a href="https://twitter.com/JDevlieghere" target="_blank">@JDevlieghere</a> and <a href="https://twitter.com/StefanPante" target="_blank">@StefanPante</a>
+                    </ul>
+                </section>
             </div>
         </div>
+        <div class="row" id="account">
+            <div class="contentbox">
+                <section>
+                    <h3>Account Info</h3>
+                </section>
+                <hr>
+                <section class="login-required">
+                    <div class="row">
+                        <div class="key">Username</div>
+                        <div class="value" id="username"></div>
+                    </div>
+                    <div class="row">
+                        <div class="key">E-mail</div>
+                        <div class="value" id="email"></div>
+                    </div>
+                    <div class="row">
+                        <div class="key">Points</div>
+                        <div class="value" id="points"></div>
+                    </div>
+                    <div class="row">
+                        <div class="key">Expiration</div>
+                        <div class="value" id="expiration"></div>
+                    </div>
+                </section>
+            </div>
+        </div>
+        <div class="row" id="limited">
+            <div class="contentbox">
+                <section>
+                    <h3>Limited Hosters</h3>
+                </section>
+                <hr>
+                <section id="hosters" class="login-required">
+                </section>
+            </div>
+        </div>
+        <div class="row" id="recent">
+            <div class="contentbox">
+                <section>
+                    <h3>Latest Downloads</h3>
+                </section>
+                <hr>
+                <section class="login-required">
+                    <table class="table table-hover" id="downloads">
+                        <thead>
+                            <tr>
+                                <th>Host</th>
+                                <th>Name</th>
+                                <th>Date</th>
+                                <th>Original</th>
+                                <th>Unrestricted</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        </tbody>
+                </section>
+            </div>
+        </div>
+
     </div>
     <script src="/js/options.js"></script>
 </body>
