Added Browser action:

--- a/src/html/options.html
+++ b/src/html/options.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="../libs/css/bootstrap.min.css">
     <link rel="stylesheet" href="../libs/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/options.css">
 
     <script type="text/javascript" src="/libs/js/jquery.min.js"></script>
     <script type="text/javascript" src="/libs/js/jquery.scrollTo.min.js"></script>
@@ -24,13 +24,13 @@
             <h1>Real Debrid</h1>
         </div>
         <ol>
-            <li><a href="#options">Options</a><i class="fa fa-cog"></i> 
+            <li><a href="#options">Options</a><i class="fa fa-cog"></i>
             </li>
-            <li><a href="#account">Account Info</a><i class="fa fa-user"></i> 
+            <li><a href="#account">Account Info</a><i class="fa fa-user"></i>
             </li>
-            <li><a href="#limited">Limited Hosters</a><i class="fa fa-bar-chart-o"></i> 
+            <li><a href="#limited">Limited Hosters</a><i class="fa fa-bar-chart-o"></i>
             </li>
-            <li><a href="#recent">Latest Downloads</a><i class="fa fa-list"></i> 
+            <li><a href="#recent">Latest Downloads</a><i class="fa fa-list"></i>
             </li>
         </ol>
         <div class="footer">Real-Debrid Extension v<span id="version"></span>
