Fixed hittable are of buttons

--- a/src/html/options.html
+++ b/src/html/options.html
@@ -24,13 +24,13 @@
             <h1>Real Debrid</h1>
         </div>
         <ol>
-            <li><a href="#options">Options</a><i class="fa fa-cog"></i>
+            <li><a href="#options">Options <i class="fa fa-cog"></i></a>
             </li>
-            <li><a href="#account">Account Info</a><i class="fa fa-user"></i>
+            <li><a href="#account">Account Info <i class="fa fa-user"></i></a>
             </li>
-            <li><a href="#limited">Limited Hosters</a><i class="fa fa-bar-chart-o"></i>
+            <li><a href="#limited">Limited Hosters <i class="fa fa-bar-chart-o"></i></a>
             </li>
-            <li><a href="#recent">Latest Downloads</a><i class="fa fa-list"></i>
+            <li><a href="#recent">Latest Downloads <i class="fa fa-list"></i></a>
             </li>
         </ol>
         <div class="footer">Real-Debrid Extension v<span id="version"></span>
