--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -21,15 +21,15 @@
 </div>
 <div class="actions">
     <ol>
-        <li><a href="#" id="download">Download Page</a><i class="fa fa-arrow-circle-down"></i>
+        <li><a href="#" id="download">Download Page<i class="fa fa-arrow-circle-down"></i></a>
         </li>
-        <li><a href="#options">Options</a><i class="fa fa-cog"></i>
+        <li><a href="#options">Options<i class="fa fa-cog"></i></a>
         </li>
-        <li><a href="#account">Account Info</a><i class="fa fa-user"></i>
+        <li><a href="#account">Account Info<i class="fa fa-user"></i></a>
         </li>
-        <li><a href="#limited">Limited Hosters</a><i class="fa fa-bar-chart-o"></i>
+        <li><a href="#limited">Limited Hosters<i class="fa fa-bar-chart-o"></i></a>
         </li>
-        <li><a href="#recent">Latest Downloads</a><i class="fa fa-list"></i>
+        <li><a href="#recent">Latest Downloads<i class="fa fa-list"></i></a>
         </li>
     </ol>
 </div>
