added empty a for osx

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -20,6 +20,7 @@
     <h1>Real Debrid</h1>
 </div>
 <div class="actions">
+    <a href="#"></a>
     <ol>
         <li><a href="#" id="download">Download Page<i class="fa fa-arrow-circle-down"></i></a>
         </li>
