Added bypass option for downloads

--- a/src/html/options.html
+++ b/src/html/options.html
@@ -62,6 +62,21 @@
             </div>
             <div class="contentbox">
                 <section>
+                    <h3>Downloads</h3>
+                </section>
+                <hr>
+                <section>
+                    <div class="fomgroup">
+                        <label for="bypassNativeDl">Bypass Chrome Downloads API</label>
+                        <input id="bypassNativeDl" name="bypassNativeDl" type="checkbox" />
+                    </div>
+                    Enable this feature to prevent the extension from starting a native Chrome download. This is only useful when using a third-party download manager.
+                </section>
+            </div>
+        </div>
+        <div class="row" id="about">
+            <div class="contentbox">
+                <section>
                     <h3>About</h3>
                 </section>
                 <hr>
