--- a/src/html/options.html
+++ b/src/html/options.html
@@ -32,6 +32,8 @@
             </li>
             <li><a href="#recent">Latest Downloads <i class="fa fa-list"></i></a>
             </li>
+            <li><a href="#about">About <i class="fa fa-info-circle"></i></a>
+            </li>
         </ol>
         <div class="footer">Real-Debrid Extension v<span id="version"></span>
         </div>
@@ -74,23 +76,7 @@
                 </section>
             </div>
         </div>
-        <div class="row" id="about">
-            <div class="contentbox">
-                <section>
-                    <h3>About</h3>
-                </section>
-                <hr>
-                <section>
-                    <ul>
-                        <li><a href="https://chrome.google.com/webstore/detail/real-debrid/llhbijccmpenbpkblhmeeneeaangebej">Real-Debrid Extension in the Chrome Web Store</a>
-                        </li>
-                        <li><a href="https://github.com/JDevlieghere/Real-Debrid">Source Code on GitHub</a>
-                        </li>
-                        <li>Follow <a href="https://twitter.com/JDevlieghere" target="_blank">@JDevlieghere</a> and <a href="https://twitter.com/StefanPante" target="_blank">@StefanPante</a>
-                    </ul>
-                </section>
-            </div>
-        </div>
+
         <div class="row" id="account">
             <div class="contentbox">
                 <section>
@@ -146,10 +132,27 @@
                         </thead>
                         <tbody>
                         </tbody>
+                    </table>
                 </section>
             </div>
         </div>
-
+        <div class="row" id="about">
+            <div class="contentbox">
+                <section>
+                    <h3>About</h3>
+                </section>
+                <hr>
+                <section>
+                    <ul>
+                        <li><a href="https://chrome.google.com/webstore/detail/real-debrid/llhbijccmpenbpkblhmeeneeaangebej">Real-Debrid Extension in the Chrome Web Store</a>
+                        </li>
+                        <li><a href="https://github.com/JDevlieghere/Real-Debrid">Source Code on GitHub</a>
+                        </li>
+                        <li>Follow <a href="https://twitter.com/JDevlieghere" target="_blank">@JDevlieghere</a> and <a href="https://twitter.com/StefanPante" target="_blank">@StefanPante</a>
+                    </ul>
+                </section>
+            </div>
+        </div>
     </div>
     <script src="/js/options.js"></script>
 </body>
