--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -22,7 +22,7 @@
 <div class="actions">
     <a href="#"></a>
     <ol>
-        <li><a href="#" id="download">Download Page<i class="fa fa-arrow-circle-down"></i></a>
+        <li><a href="#" id="download">Download Current Page<i class="fa fa-arrow-circle-down"></i></a>
         </li>
         <li><a href="#options">Options<i class="fa fa-cog"></i></a>
         </li>
