--- a/src/html/options.html
+++ b/src/html/options.html
@@ -72,7 +72,7 @@
                         <label for="bypassNativeDl">Bypass Chrome Downloads API</label>
                         <input id="bypassNativeDl" name="bypassNativeDl" type="checkbox" />
                     </div>
-                    Enable this feature to prevent the extension from starting a native Chrome download. This is only useful when using a third-party download manager and <b>disables some of the extension's features</b>.
+                    Enable this feature to prevent the forceful creation of a Chrome download. This is only useful when using a third-party download manager and <b>disables some of the extension's features</b>.
                 </section>
             </div>
         </div>
