additional check for "Downloads list disabled." to prevent hiding the account info.

--- a/src/html/options.html
+++ b/src/html/options.html
@@ -83,7 +83,7 @@
                     <h3>Account Info</h3>
                 </section>
                 <hr>
-                <section class="login-required">
+                <section class="login-required accountInfo">
                     <div class="row">
                         <div class="key">Username</div>
                         <div class="value" id="username"></div>
