additional check for "Downloads list disabled." to prevent hiding the account info.

--- a/src/html/options.html
+++ b/src/html/options.html
@@ -119,7 +119,7 @@
                     <h3>Latest Downloads</h3>
                 </section>
                 <hr>
-                <section class="login-required">
+                <section class="login-required latestDownloads">
                     <table class="table table-hover" id="downloads">
                         <thead>
                             <tr>
