Added torrent options

--- a/src/html/options.html
+++ b/src/html/options.html
@@ -75,6 +75,26 @@
                     Enable this feature to prevent the forceful creation of a Chrome download. This is only useful when using a third-party download manager and <b>disables some of the extension's features</b>.
                 </section>
             </div>
+            <div class="contentbox">
+                <section>
+                    <h3>Torrents</h3>
+                </section>
+                <hr>
+                <section>
+                    <div class="fomgroup">
+                        <label for="splittingSize">Splitting size (GB)</label>
+                        <input id="splittingSize" name="splittingSize" type="number" class="form-control" />
+                    </div>
+                    <div class="fomgroup">
+                        <label for="torrentHost">Hoster</label>
+                        <select id="torrentHost" name="torrentHost" class="form-control">
+                            <option value="mega">Mega.co.nz</option>
+                            <option value="1f">1Fichier.com </option>
+                            <option value="utb">Uptobox.com</option>
+                        </select>
+                    </div>
+                </section>
+            </div>
         </div>
 
         <div class="row" id="account">
