Updated display of success and failure

--- a/src/html/options.html
+++ b/src/html/options.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+    <div id="message-container" class="success">test message</div>
     <div id="sidebar">
         <div class="brand">
             <h1>Real Debrid</h1>
