--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -16,25 +16,23 @@
 
     <script type="text/javascript" src="/libs/js/jquery.min.js"></script>
 </head>
-<div class="brand">
-    <h1>Real Debrid</h1>
-</div>
-<div class="actions">
-    <a href="#"></a>
-    <ol>
-        <li><a href="#" id="download">Download Current Page<i class="fa fa-arrow-circle-down"></i></a>
-        </li>
-        <li><a href="#options">Options<i class="fa fa-cog"></i></a>
-        </li>
-        <li><a href="#account">Account Info<i class="fa fa-user"></i></a>
-        </li>
-        <li><a href="#limited">Limited Hosters<i class="fa fa-bar-chart-o"></i></a>
-        </li>
-        <li><a href="#recent">Latest Downloads<i class="fa fa-list"></i></a>
-        </li>
-    </ol>
-</div>
-<script src="/js/popup.js"></script>
 
 <body>
+    <div class="brand">
+        <h1>Real Debrid</h1>
+    </div>
+    <div class="actions">
+        <a href="#"></a>
+        <ol>
+            <li><a href="#" id="download">Download Current Page<i class="fa fa-arrow-circle-down"></i></a>
+            </li>
+            <li><a class="opt" href="#options">Options<i class="fa fa-cog"></i></a>
+            </li>
+            <li><a class="opt" href="#account">Account Info<i class="fa fa-user"></i></a>
+            </li>
+            <li><a class="opt" href="#recent">Latest Downloads<i class="fa fa-list"></i></a>
+            </li>
+        </ol>
+    </div>
+    <script src="/js/popup.js"></script>
 </body>
