- removed shadows, - removed dependency on bootstrap in the options.html, css - restructure css.

--- a/src/html/options.html
+++ b/src/html/options.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="../libs/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="../libs/css/bootstrap.min.css">-->
     <link rel="stylesheet" href="../libs/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/options.css">
 
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <div id="message-container" class="success">test message</div>
+    <div id="message-container" class="success">This is my test string!</div>
     <div id="sidebar">
         <div class="brand">
             <h1>Real Debrid</h1>
@@ -51,7 +51,7 @@
                 <hr>
                 <section>
                     <form class="form-inline">
-                        <div class="fomgroup">
+                        <div class="formgroup">
                             <label for="apiKey">API Key</label>
                             <input id="apiKey" name="apiKey" type="text" class="form-control" />
                         </div>
@@ -72,11 +72,11 @@
                 <hr>
                 <section>
                     <form class="form-inline">
-                        <div class="fomgroup">
+                        <div class="formgroup">
                             <label for="warningPercentage">Limited hoster usage (%)</label>
                             <input id="warningPercentage" name="warningPercentage" type="number" class="form-control" />
                         </div>
-                        <div class="fomgroup">
+                        <div class="formgroup">
                             <label for="warningDays">Premium expiration (days)</label>
                             <input id="warningDays" name="warningDays" type="number" class="form-control" />
                         </div>
@@ -91,7 +91,7 @@
                 </section>
                 <hr>
                 <section>
-                    <div class="fomgroup">
+                    <div class="formgroup">
                         <label for="bypassNativeDl">Bypass Chrome Downloads API</label>
                         <input id="bypassNativeDl" name="bypassNativeDl" type="checkbox" />
                     </div>
@@ -104,11 +104,11 @@
                 </section>
                 <hr>
                 <section>
-                    <div class="fomgroup">
+                    <div class="formgroup">
                         <label for="splittingSize">Splitting size (GB)</label>
                         <input id="splittingSize" name="splittingSize" type="number" class="form-control" />
                     </div>
-                    <div class="fomgroup">
+                    <div class="formgroup">
                         <label for="torrentHost">Hoster</label>
                         <select id="torrentHost" name="torrentHost" class="form-control">
                             <option value="mega">Mega.co.nz</option>
