remove commented tags

--- a/src/html/options.html
+++ b/src/html/options.html
@@ -10,7 +10,6 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--<link rel="stylesheet" href="../libs/css/bootstrap.min.css">-->
     <link rel="stylesheet" href="../libs/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/options.css">
 
@@ -18,7 +17,7 @@
 </head>
 
 <body>
-    <div id="message-container" class="success">This is my test string!</div>
+    <div id="message-container" class="success"></div>
     <div id="sidebar">
         <div class="brand">
             <h1>Real Debrid</h1>
