Lots of styling fixes and organizing

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <link rel="stylesheet" href="/css/fonts.css">
     <link rel="stylesheet" href="/libs/css/material.min.css">
-    <script type="text/javascript" src="/libs/js/jquery.min.js"></script>
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/popup.css">
 </head>
 
@@ -36,15 +36,15 @@
                     <section class="login-required">
                         <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored downloadPage">
 								Unrestrict current page
-							</button>
+						</button>
                         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                             <input class="mdl-textfield__input form-control" type="text" id="unrestrictUrl" name="unrestrictUrl">
                             <label class="mdl-textfield__label" for="unrestrictUrl">Unrestrict a URL</label>
                             <span class="mdl-textfield__error">Please insert a valid URL</span>
                         </div>
-                        <button class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect unrestrictUrl">
+                        <button class="mdl-button mdl-js-button mdl-js-ripple-effect unrestrictUrl">
 								get
-							</button>
+						</button>
                     </section>
                 </div>
             </section>
@@ -58,6 +58,7 @@
             </section>
         </main>
     </div>
+    <script type="text/javascript" src="/libs/js/jquery.min.js"></script>
     <script type="text/javascript" src="/libs/js/material.min.js"></script>
     <script type="text/javascript" src="/libs/js/moment.min.js"></script>
     <script type="text/javascript" src="/js/functions.js"></script>
