--- a/src/html/options.html
+++ b/src/html/options.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <link rel="stylesheet" href="/css/fonts.css">
     <link rel="stylesheet" href="/libs/css/material.min.css">
-    <script type="text/javascript" src="/libs/js/jquery.min.js"></script>
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/options.css">
 </head>
 
@@ -198,6 +198,7 @@
             </div>
         </main>
     </div>
+    <script type="text/javascript" src="/libs/js/jquery.min.js"></script>
     <script type="text/javascript" src="/libs/js/material.min.js"></script>
     <script type="text/javascript" src="/libs/js/moment.min.js"></script>
     <script type="text/javascript" src="/js/functions.js"></script>
